--- a/Practice_2020/JS-21/package.json
+++ b/Practice_2020/JS-21/package.json
@@ -18,6 +18,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "browser-sync": "^2.27.10",
     "browsersync-ssi": "^0.2.4",
     "compress-images": "^2.0.4",
@@ -35,10 +36,10 @@
     "gulp-sass-glob": "^1.1.0",
     "gulp-uglify": "^3.0.2",
     "gulp-uglify-es": "^3.0.0",
-    "jasmine": "^4.1.0",
     "jest": "^28.1.0",
     "jest-environment-jsdom": "^28.1.0",
     "jquery": "^3.6.0",
+    "jsdom": "^19.0.0",
     "pngquant-bin": "^7.0.2",
     "postcss": "^8.4.5",
     "sass": "^1.47.0"
@@ -420,7 +421,6 @@
     "istanbul-lib-source-maps": "^4.0.1",
     "istanbul-reports": "^3.1.4",
     "isurl": "^1.0.0",
-    "jasmine-core": "^4.1.1",
     "jest-changed-files": "^28.0.2",
     "jest-circus": "^28.1.0",
     "jest-cli": "^28.1.0",
